[gd_scene load_steps=9 format=3 uid="uid://dky60pdpk0ffa"]

[ext_resource type="Script" path="res://Hud/Scenes/Upgrades/purchase_button.gd" id="1_c15yb"]
[ext_resource type="Theme" uid="uid://crf5gyv8gm6r1" path="res://Hud/Themes/Subtle Background.tres" id="2_c4q5t"]
[ext_resource type="SpriteFrames" uid="uid://g71x1b7vd3pt" path="res://Art/Animations/autobuyer.tres" id="4_124l4"]
[ext_resource type="Theme" uid="uid://b8t7tkhvril5g" path="res://Hud/Themes/Standard.tres" id="4_dhfok"]
[ext_resource type="PackedScene" uid="uid://cnygr4pwivdv1" path="res://Hud/Scenes/RichLabel.tscn" id="5_4iwff"]
[ext_resource type="PackedScene" uid="uid://bic2t0qt743uw" path="res://Hud/Scenes/Upgrades/cost_components.tscn" id="5_p7unn"]
[ext_resource type="Theme" uid="uid://rfljn78ajnbs" path="res://Hud/Themes/Invis.tres" id="7_d7nvp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aykbp"]
bg_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color(0, 0, 0, 0.34902)
shadow_size = 5

[node name="Purchase Button" type="MarginContainer"]
offset_right = 44.0
offset_bottom = 44.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_c15yb")

[node name="Background" type="Panel" parent="."]
layout_mode = 2
theme = ExtResource("2_c4q5t")
theme_override_styles/panel = SubResource("StyleBoxFlat_aykbp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Details" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Details"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleComponents" type="HBoxContainer" parent="VBoxContainer/Details/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="IconContainer" type="Control" parent="VBoxContainer/Details/VBoxContainer/TitleComponents"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="Texture Rect" type="TextureRect" parent="VBoxContainer/Details/VBoxContainer/TitleComponents/IconContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
offset_right = 24.0
offset_bottom = 24.0
size_flags_horizontal = 0
mouse_filter = 2
expand_mode = 2
stretch_mode = 5

[node name="AutobuyerAnim" type="AnimatedSprite2D" parent="VBoxContainer/Details/VBoxContainer/TitleComponents/IconContainer/Texture Rect"]
unique_name_in_owner = true
visible = false
show_behind_parent = true
position = Vector2(12, 12)
sprite_frames = ExtResource("4_124l4")
frame_progress = 0.468488

[node name="Title" type="RichTextLabel" parent="VBoxContainer/Details/VBoxContainer/TitleComponents"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_dhfok")
bbcode_enabled = true
fit_content = true
autowrap_mode = 0

[node name="times purchased" parent="VBoxContainer/Details/VBoxContainer/TitleComponents" instance=ExtResource("5_4iwff")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "4/5"
autowrap_mode = 0

[node name="Description" type="RichTextLabel" parent="VBoxContainer/Details/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("4_dhfok")
bbcode_enabled = true
text = "Increases the haste of all Thingies, reducing duration."
fit_content = true

[node name="CostComponents" parent="VBoxContainer" instance=ExtResource("5_p7unn")]
unique_name_in_owner = true
layout_mode = 2

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("7_d7nvp")
metadata/_edit_lock_ = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="gui_input" from="Button" to="." method="_on_button_gui_input"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
